--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root{
     --color-1: hsl(0, 0%, 6%);
     --color-2: hsl(0, 0%, 15%);
-    --color-3: hsl(0, 0%, 58%);
+    --color-3: hsla(0, 0%, 58%, 0.23);
     --color-4: hsl(0, 99%, 36%);
     --color-5: hsl(0, 100%, 50%);
     --color-6: hsl(213, 74%, 40%);
@@ -13,5 +13,35 @@
     --font-med: 0.75rem;
     --font-small: 0.5625rem;
 
+}
+
+*{
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Roboto, Arial, sans-serif;
+    font-size: var(--font-lg);
+    background-color: var(--color-1);
+}
+
+.icon {
+    height: var(--font-lg);
+    width: var(--font-lg);
+    fill: var(--color-7);
+    
+  }
+
+.icon-container {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 1.75rem;
+    height:1.75rem;
+    border-radius: 100px;
+}
+
+.icon-container:hover {
+    background-color: var(--color-3);
 }
 
