--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 :root{
     --color-1: hsl(0, 0%, 6%);
     --color-2: hsl(0, 0%, 15%);
-    --color-3: hsla(0, 0%, 58%, 0.23);
+    --color-3: hsla(0, 0%, 58%);
     --color-4: hsl(0, 99%, 36%);
     --color-5: hsl(0, 100%, 50%);
     --color-6: hsl(213, 74%, 40%);
     --color-7: hsl(0, 0%, 100%);
+    --color-hover: hsla(0, 0%, 58%, 0.3);
+
     /* heading-16px, normal-12px, sub line-9px */
 
     --font-xlg: 1.125rem;
@@ -17,12 +19,19 @@
 
 *{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
     font-family: Roboto, Arial, sans-serif;
     font-size: var(--font-lg);
     background-color: var(--color-1);
+    color: var(--color-7);
+}
+
+li{
+    list-style: none;
 }
 
 .icon {
@@ -42,6 +51,84 @@ body {
 }
 
 .icon-container:hover {
+    background-color: var(--color-hover);
+}
+
+.icon-container--grey {
     background-color: var(--color-3);
 }
 
+header {
+    padding: 0.5rem 1rem;
+    border: 1px solid lime;
+}
+
+.header-nav {
+    display: flex;
+    gap: 2rem
+}
+
+.header-nav__left {
+    display: flex;
+    gap: 1rem;
+}
+
+.header-nav__items--flex {
+    display: flex;
+    gap: 0.25rem;
+}
+
+.header-nav__image {
+    width: 1.75rem;
+    height: fit-content;
+    object-fit: fill;
+}
+
+.header-nav__logo-text {
+    /* font-size: var(--font-xlg);
+    font-weight: 700;
+    font-family: 'Poppins', sans-serif; */
+    font:700 var(--font-xlg) 'Poppins',sans-serif ;
+}
+
+.header-nav__middle {
+    display: flex;
+    gap: 1rem;
+    flex-grow: 1;
+}
+.header-nav__search-container {
+    border: 1px solid var(--color-3);
+    flex-grow: 1;
+    flex-shrink: 1;
+    display: flex;
+    align-items: center;
+    border-radius: 100px;
+    height: fit-content;
+    padding-left: 0.75rem;
+
+
+}
+
+.header-nav__search-container .search {
+    background-color: inherit;
+    color: inherit;
+    height: 1.75rem;
+    width: 100%;
+    padding-right: 1rem;
+    border: 0;
+    border-radius: 100px;
+    outline: 0;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+.header-nav__search-container .icon-container {
+    border-radius: 0 100px 100px 0;
+    width: 3rem;
+}
+
+.header-nav__right {
+    display: flex;
+    gap: 1rem;
+    margin-left: ;
+}
