--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,9 @@ li{
     list-style: none;
 }
 
+/* components */
+
+/* icons */
 .icon {
     height: var(--font-lg);
     width: var(--font-lg);
@@ -57,6 +60,74 @@ li{
 .icon-container--grey {
     background-color: var(--color-tertiary);
 }
+/* cards */
+
+.card{
+    /* border: 1px solid skyblue; */
+    margin: 3rem;
+    width: 360px;
+    height: 303px;
+    position: relative;
+    border-radius: 14px;
+}
+
+.card__image{
+    object-fit: cover;
+    max-height: 202px;
+    width: 100%;
+    border-radius: 10px;
+    transition: all 200ms ease;
+}
+
+.card:hover .card__image {
+    /* transform: scale(1.01); */
+    border-radius: 0;
+}
+
+.card::after{
+    content: "48:02";
+    background-color: rgb(12, 12, 12);
+    position: absolute;
+    z-index: 3;
+    bottom: 102px;
+    right: 4px;
+    font-size: var(--font-small);
+    width: fit-content;
+    padding: calc((var(--font-small)/4));
+    border-radius: 12%;
+}
+
+.card__detail {
+    margin: 0.5rem 0;
+    display: flex;
+    gap: 0.75rem;
+}
+
+.card__avatar{
+    width: 36px;
+    height: 34px;
+    background-color: var(--color-font-primary);
+    border-radius: 50%;
+    /* border: 2px solid var(--color-accent-secondary); */
+    display: flex;
+    align-items: center;
+    flex-basis: 38px;
+    margin-left: 0.25rem;
+}
+
+.card__icon {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
+
+.card__channel,
+.card__stats {
+    color: var(--color-tertiary);
+    font-size: var(--font-med);
+}
+
+/* top-navBar */
 
 header {
     padding: 0.5rem 1rem;
