--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ li{
 }
 
 .icon-container--grey {
-    background-color: var(--color-tertiary);
+    background-color: var(--color-secondary);
 }
 /* cards */
 
@@ -164,7 +164,7 @@ header {
     flex-grow: 2;
 }
 .header-nav__search-container {
-    border: 1px solid var(--color-tertiary);
+    border: 1px solid var(--color-secondary);
     flex-grow: 2;
     flex-shrink: 1;
     display: flex;
@@ -215,4 +215,46 @@ header {
     justify-content: center;
 }
 
+/* genre tabs */
+
+.genre__container {
+    display: flex;
+    gap: 0.75rem;
+    padding: 0.25rem 0.75rem;
+    max-width: 100vw;
+    /* overflow-x: scroll; */
+    /* background-color: steelblue; */
+}
+
+.genre__items {
+    min-width: max-content;
+    background-color: var(--color-secondary);
+    padding: 0.5rem;
+    border-radius: 10px;
+    text-transform: capitalize;
+}
+
+.genre__items:first-child {
+    background-color: var(--color-font-primary);
+    color: var(--color-primary);
+}
+
+.genre__items:hover,
+.genre__items:focus {
+    background-color: var(--color-tertiary);
+}
+
+.genre__items:active {
+    background-color: var(--color-font-primary);
+    color: var(--color-primary);
+}
+
+/* .genre__container::-webkit-scrollbar {
+     height: 100%;
+}
+
+.genre__container::-webkit-scrollbar-button{
+    background-color: #fff;
+    height: 100%; 
+} */
 
