--- a/styles.css
+++ b/styles.css
@@ -60,9 +60,9 @@ li{
 .icon-container--grey {
     background-color: var(--color-secondary);
 }
-/* cards */
+/* crds */
 
-.card{
+.crd{
     /* border: 1px solid skyblue; */
     /* margin: 3rem; */
     width: 360px;
@@ -71,7 +71,7 @@ li{
     border-radius: 14px;
 }
 
-.card__image{
+.crd__image{
     object-fit: cover;
     max-height: 202px;
     width: 100%;
@@ -79,12 +79,12 @@ li{
     transition: all 200ms ease;
 }
 
-.card:hover .card__image {
+.crd:hover .crd__image {
     /* transform: scale(1.01); */
     border-radius: 0;
 }
 
-.card::after{
+.crd::after{
     content: "48:02";
     background-color: rgb(12, 12, 12);
     position: absolute;
@@ -97,13 +97,13 @@ li{
     border-radius: 12%;
 }
 
-.card__detail {
+.crd__detail {
     margin: 0.5rem 0;
     display: flex;
     gap: 0.75rem;
 }
 
-.card__avatar{
+.crd__avatar{
     width: 36px;
     height: 34px;
     background-color: var(--color-font-primary);
@@ -115,14 +115,14 @@ li{
     margin-left: 0.25rem;
 }
 
-.card__icon {
+.crd__icon {
     width: 100%;
     height: 100%;
     object-fit: fill;
 }
 
-.card__channel,
-.card__stats {
+.crd__channel,
+.crd__stats {
     color: var(--color-tertiary);
     font-size: var(--font-med);
 }
