--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,33 @@ header {
     flex-grow: 1;
 }
 
+
+/* genre tabs */
+
+.genre__container {
+    display: flex;
+    gap: 0.75rem;
+    padding: 0.25rem 0.75rem;
+    max-width: 100vw;
+    margin-bottom: 35px; !important
+    /* overflow-x: scroll; */
+    /* background-color: steelblue; */
+}
+
+
+.genre__items:hover,
+.genre__items:focus {
+    background-color: var(--color-tertiary);
+}
+/* .genre__container::-webkit-scrollbar {
+    height: 100%;
+}
+
+.genre__container::-webkit-scrollbar-button{
+    background-color: #fff;
+    height: 100%; 
+} */
+
 /* grid for video gallery */
 
 .gallery {
@@ -215,46 +242,7 @@ header {
     justify-content: center;
 }
 
-/* genre tabs */
 
-.genre__container {
-    display: flex;
-    gap: 0.75rem;
-    padding: 0.25rem 0.75rem;
-    max-width: 100vw;
-    /* overflow-x: scroll; */
-    /* background-color: steelblue; */
+.list-group-item:hover {
+    background-color: var(--color-accent-secondary); !important
 }
-
-.genre__items {
-    min-width: max-content;
-    background-color: var(--color-secondary);
-    padding: 0.5rem;
-    border-radius: 10px;
-    text-transform: capitalize;
-}
-
-.genre__items:first-child {
-    background-color: var(--color-font-primary);
-    color: var(--color-primary);
-}
-
-.genre__items:hover,
-.genre__items:focus {
-    background-color: var(--color-tertiary);
-}
-
-.genre__items:active {
-    background-color: var(--color-font-primary);
-    color: var(--color-primary);
-}
-
-/* .genre__container::-webkit-scrollbar {
-     height: 100%;
-}
-
-.genre__container::-webkit-scrollbar-button{
-    background-color: #fff;
-    height: 100%; 
-} */
-
