--- a/styles.css
+++ b/styles.css
@@ -213,7 +213,7 @@ header {
     gap: 0.75rem;
     padding: 0.25rem 0.75rem;
     max-width: 100vw;
-    margin-bottom: 35px; !important
+    margin-bottom: 35px;
     /* overflow-x: scroll; */
     /* background-color: steelblue; */
 }
@@ -240,9 +240,4 @@ header {
     grid-gap: 2rem 1rem;
     grid-template-columns:repeat(auto-fit,360px);
     justify-content: center;
-}
-
-
-.list-group-item:hover {
-    background-color: var(--color-accent-secondary); !important
 }
